@@ -2,6 +2,9 @@ update-manager (1:0.93.26) intrepid; urgency=low
 
   * DistUpgrade/DistUpgradeController.py:
     - workaround kde tmpfile permissions (LP: #277431)
+  * UpdateManager/Common/utils.py:
+    - do not crash if gconfd is not availabe/unusable 
+      (LP: #281248)
 
  --
 
